--- a/androidutilslibrary/build.gradle
+++ b/androidutilslibrary/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 //apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.vsay01'
 
 //Step II: Add the below publish details
 /*publish {
